# python-sandbox

./: dc.py
func-pythn/: dset.py  pyproject.toml
pydantic/: pd.py  pyproject.toml
python-oop/: pyproject.toml
python-oop/notebooks/: Class_State.ipynb  Classes.ipynb  Getattr_Setattr.ipynb  Instance_Attributes.ipynb  Methods.ipynb
python-parallel/: main.py  main_threading.py  pyproject.toml
