[tool.poetry]
name = "func-pythn"
version = "0.1.0"
description = ""
authors = ["Ragnar Olafsson <ragnar.orn@gmail.com>"]
readme = "README.md"
packages = [{include = "func_pythn"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
