[tool.poetry]
name = "python-parallel"
version = "0.1.0"
description = ""
authors = ["Ragnar Olafsson <ragnar.orn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_parallel"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
